[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version="2.5.0", features = ["json"]}
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
thiserror = "1.0.37"
url = "2.3.1"
reqwest = {version="0.11.4", features = ["json"], optional = true}
tokio = {version = "1.22.0", features = ["full"]}

[features]
async = [
    "reqwest"
]
